@@ -1,5 +1,6 @@
 /.build/
 !.gitignore
+/.latest
 /Dist-Zilla-PluginBundle-Author-ETHER-*/
 /Dist-Zilla-PluginBundle-Author-ETHER-*.tar.gz
 /todo.txt
