@@ -42,8 +42,14 @@ filename = .gitignore
 is_template = 1
 content = /.build/
 content = !.gitignore
+content = /.latest
 content = /{{ '{{$dist->name}}' }}-*/
 content = /{{ '{{$dist->name}}' }}-*.tar.gz
+
+[GenerateFile / ackrc]
+filename = .ackrc
+is_template = 1
+content = --ignore-dir=.latest
 
 [GenerateFile / Changes]
 filename = Changes
