@@ -37,6 +37,7 @@ $tzil->mint_dist;
 my $mint_dir = path($tzil->tempdir)->child('mint');
 
 my @expected_files = qw(
+    .ackrc
     .gitignore
     Changes
     dist.ini
